# alphaleus_assignment1

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: digest.yml  pipeline.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  pipeline.py  scheduler.py
backend/app/api/v1/: changes.py  competitors.py  digest.py  pipeline.py  profile.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  app_state.py  business.py  change.py  competitor.py  snapshot.py  thesis.py
backend/app/schemas/: business.py  competitor.py
backend/app/services/: classifier.py  crm.py  digest.py  embeddings.py  enrich.py  ingest.py  llm.py  scraper.py  structured.py  thesis.py
backend/scripts/: seed_demo.py  setup_notion.py
backend/tests/: test_crm.py  test_detection.py  test_digest.py
extension/: README.md  background.js  manifest.json  options.html  options.js  popup.html  popup.js
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: ChangeCard.tsx  Layout.tsx  badges.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/pages/: CompetitorDetail.tsx  Dashboard.tsx  Feed.tsx  Onboarding.tsx  Settings.tsx
