[project]
name = "argus-backend"
version = "0.1.0"
description = "Argus — Autonomous Competitor Intelligence Engine (backend)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "httpx>=0.28",
    "trafilatura>=1.12",
    "structlog>=24.4",
]

# Phased on purpose: embeddings/LLM deps (fastembed, llama-cpp-python) land on
# Day 2/3 so Day 1 stays light and installs fast. See README roadmap.

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
