[project]
name = "argus-backend"
version = "0.1.0"
description = "Argus — Autonomous Competitor Intelligence Engine (backend)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "httpx>=0.28",
    "trafilatura>=1.12",
    "structlog>=24.4",
    "fastembed>=0.4",
    "apscheduler>=3.10",
]

# Phased on purpose: the LLM dep (llama-cpp-python) lands on Day 3 so earlier
# days stay light and install fast. See README roadmap.

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency injectors are designed to be called in argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
