[project]
name = "argus-backend"
version = "0.1.0"
description = "Argus — Autonomous Competitor Intelligence Engine (backend)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "httpx>=0.28",
    "trafilatura>=1.12",
    "structlog>=24.4",
    "fastembed>=0.4",
    "apscheduler>=3.10",
    "ollama>=0.4",
    "notion-client>=2.2",
]

# The LLM runs via Ollama (a separate process with runtime CPU-feature detection,
# so there are no fragile prebuilt-wheel instruction-set issues — we hit an
# AVX-512 illegal-instruction crash with llama-cpp-python on a 12th-gen i5).
# Only the enrichment path talks to Ollama, so the always-on web host never
# needs Ollama or the model loaded.

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency injectors are designed to be called in argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
